# remote-mcp

./: .gitignore  .samignore  CONTRIBUTING.md  README.md  pyproject.toml  pytest.ini  requirements.txt  samconfig.toml  template.yaml
.aws-sam/: build.toml  sync.toml
.aws-sam/auto-dependency-layer/: adl_nested_template.yaml  template.yaml
.aws-sam/auto-dependency-layer/RemoteMCPFunction/: .samignore  README.md  pyproject.toml  samconfig.toml  template.yaml
.aws-sam/auto-dependency-layer/RemoteMCPFunction/docs/: index.html
.aws-sam/auto-dependency-layer/RemoteMCPFunction/remote_mcp/client/: __main__.py
.aws-sam/auto-dependency-layer/RemoteMCPFunction/remote_mcp/server/: tools.py
.aws-sam/auto-dependency-layer/RemoteMCPFunction/remote_mcp/server/mcp_lambda_handler/: types.py
.aws-sam/auto-dependency-layer/RemoteMCPFunction/tests/integration/: test_api_gateway.py
.aws-sam/auto-dependency-layer/RemoteMCPFunction/tests/unit/: test_lambda_handler.py
.aws-sam/auto-dependency-layer/RemoteMCPFunction27748762DepLayer/: AWS_SAM_CLI_README
docs/: api.md  index.html
remote_mcp/client/: __main__.py
remote_mcp/server/: __main__.py  app.py  handler.py  models.py  resources.py  tools.py
remote_mcp/server/mcp_lambda_handler/: __init__.py  mcp_lambda_handler.py  session.py  types.py
tests/: __init__.py
tests/integration/: test_api_gateway.py
tests/unit/: test_lambda_handler.py
