[project]
name = "remote-mcp"
version = "0.1.0"
description = "Remote MCP Server Template"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "Nick Armenta", email = "nick@advin.io"},
]
license = {text = "MIT"}

dependencies = [
    "boto3>=1.40.21",
    "mcp[cli]>=1.13.1",
    
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.26.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
    "pre-commit>=3.5.0",
    "pytest-xdist>=3.8.0",
    "types-PyYAML>=6.0.0",
    "safety>=3.0.0",
    "bandit[toml]>=1.7.0",
    "python-dotenv>=1.1.1",
    "ruff>=0.12.11",
]
